--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,144 @@
-html{
+@font-face {
+  font-family: 'Helvetica', sans-serif;
+  src: url(../fonts/helvetica.woff2);
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Helvetica-Bold', sans-serif;
+  src: url(../fonts/helvetica-bold.woff2);
+  font-style: normal;
+  font-weight: 700;
+}
+
+
+html {
   box-sizing: border-box;
 }
 
 *,
 *::before,
-*::after{
+*::after {
   box-sizing: inherit;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-li{
+li {
   list-style: none;
 }
 
-img{
+img {
   max-width: 100%;
+}
+
+.container {
+  max-width: 1220px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+body {
+  font-family: 'Helvetica', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #5C5C5E;
+}
+
+.header {
+  border-bottom: 1px solid #CACAD6;
+  background-color: #F6F4F5;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+}
+
+.menu {
+  display: flex;
+  gap: 0 20px;
+}
+
+.basket {
+  position: relative;
+}
+
+.basket--on span {
+  font-size: 11px;
+  width: 15px;
+  height: 15px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  right: -2px;
+}
+
+.top {
+  min-height: calc(100vh - 81px);
+  background-image: url(../images/top-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+}
+
+.title {
+  padding-top: 5%;
+  font-size: 96px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+
+.subtitle {
+  font-size: 36px;
+  line-height: normal;
+  margin-bottom: 5px;
+}
+
+.top__text {
+  font-size: 13px;
+  line-height: normal;
+  margin-bottom: 50px;
+}
+
+.buy-btn {
+  cursor: pointer;
+  border: none;
+  background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+  display: flex;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 1px;
+}
+
+.buy-btn__text {
+  padding: 20px 110px;
+  color: #F6F4F5;
+}
+
+.buy-btn__price {
+  padding: 20px 105px;
+  background-color: #F6F4F5;
+}
+
+.buy__text {
+  padding-top: 6px;
+  font-size: 13px;
+  line-height: normal;
+  /* margin-bottom: 454px; */
 }
