--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,33 @@ img {
   max-width: 100%;
 }
 
+button {
+  columns: inherit;
+  font-size: inherit;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  padding: 0;
+  color: inherit;
+}
+
 .container {
   max-width: 1220px;
   padding: 0 10px;
   margin: 0 auto;
 }
 
+.section-title {
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
 body {
   font-family: 'Helvetica', sans-serif;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: normal;
   color: #5C5C5E;
 }
 
@@ -56,8 +72,8 @@ body {
 }
 
 .nav {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   height: 80px;
 }
@@ -67,8 +83,13 @@ body {
   gap: 0 20px;
 }
 
+.logo {
+  justify-self: center;
+}
+
 .basket {
   position: relative;
+  justify-self: end;
 }
 
 .basket--on span {
@@ -99,19 +120,16 @@ body {
   font-size: 96px;
   font-style: normal;
   font-weight: 400;
-  line-height: normal;
   margin-bottom: 10px;
 }
 
 .subtitle {
   font-size: 36px;
-  line-height: normal;
   margin-bottom: 5px;
 }
 
 .top__text {
   font-size: 13px;
-  line-height: normal;
   margin-bottom: 50px;
 }
 
@@ -122,16 +140,16 @@ body {
   border: 1px solid;
   border-image-source: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
   border-image-slice: 1;
-  display: flex;
   font-weight: 700;
-  line-height: normal;
   text-transform: uppercase;
+  display: flex;
 }
 
 .buy-btn__text {
   padding: 20px 110px;
   color: #F6F4F5;
   background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+
 }
 
 .buy-btn__price {
@@ -142,6 +160,114 @@ body {
 .buy__text {
   padding-top: 6px;
   font-size: 13px;
-  line-height: normal;
   /* margin-bottom: 454px; */
 }
+
+.features {
+  padding: 100px 0;
+}
+
+.features__titles {
+  display: flex;
+}
+
+.features__title {
+  flex-basis: 300px;
+  padding-right: 20px;
+}
+
+.features__text {
+  max-width: 330px;
+  font-size: 36px;
+  text-transform: uppercase;
+  margin-bottom: 2px;
+  background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.tabs {
+  display: grid;
+  grid-template-columns: 300px auto;
+}
+
+.tabs__btn {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.tabs__btn-item {
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.tabs__btn-item:last-child {
+  margin-bottom: 0;
+}
+
+.tabs__btn-item--active {
+  color: #070707;
+}
+
+.tabs__content{
+  position: relative;
+  min-height: 300px;
+}
+
+.tabs__content-item {
+  display: grid;
+  grid-template-columns: auto 280px;
+  grid-template-rows: auto 150px;
+  gap: 0 40px;
+  opacity: 0;
+  position: absolute;
+  transition: opacity .3s ease;
+}
+
+.tabs__content-item--active{
+  opacity: 1;
+}
+
+
+.tabs__content-img{
+  grid-row: 1/-1;
+
+}
+
+.tabs__content-box h3{
+  font-weight: 400;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.tabs__content-box p{
+  padding-bottom: 20px;
+}
+
+.video {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  width: 280px;
+  height: 150px;
+  background-image: url(../images/content-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: flex-start;
+  padding: 9px 10px;
+}
+
+.video__btn{
+  margin-left: 22px;
+}
+
+.video span {
+  color: #F6F4F5;
+  font-size: 13px;
+}
+
+.tabs__content-item {}
