--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,8 @@ body {
   font-size: 36px;
   text-transform: uppercase;
   margin-bottom: 2px;
-  background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -210,7 +211,7 @@ body {
   color: #070707;
 }
 
-.tabs__content{
+.tabs__content {
   position: relative;
   min-height: 300px;
 }
@@ -225,23 +226,23 @@ body {
   transition: opacity .3s ease;
 }
 
-.tabs__content-item--active{
+.tabs__content-item--active {
   opacity: 1;
 }
 
 
-.tabs__content-img{
+.tabs__content-img {
   grid-row: 1/-1;
 
 }
 
-.tabs__content-box h3{
+.tabs__content-box h3 {
   font-weight: 400;
   font-size: 24px;
   margin-bottom: 10px;
 }
 
-.tabs__content-box p{
+.tabs__content-box p {
   padding-bottom: 20px;
 }
 
@@ -261,7 +262,7 @@ body {
   padding: 9px 10px;
 }
 
-.video__btn{
+.video__btn {
   margin-left: 22px;
 }
 
@@ -270,4 +271,79 @@ body {
   font-size: 13px;
 }
 
-.tabs__content-item {}
+.game {
+  margin-bottom: 100px;
+}
+
+.game__title {
+  margin-bottom: 50px;
+}
+
+.game__inner {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.game__descr {
+  padding-right: 10px;
+}
+
+.game__descr-title {
+  font-size: 36px;
+  text-transform: uppercase;
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 10px;
+}
+
+.game__descr-text {
+  margin-bottom: 30px;
+}
+
+.game__link {
+  display: inline-block;
+  font-weight: 700;
+  padding: 16px 48px;
+  text-transform: uppercase;
+  border: 1px solid;
+  border-image-source: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+  border-image-slice: 1;
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.game__item {
+  border: 1px solid;
+  border-image-source: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%);
+  border-image-slice: 1;
+  padding: 20px 20px 22px;
+  display: flex;
+  flex-direction: column;
+}
+
+.game__item-img {
+  margin-bottom: 10px;
+}
+
+.game__item-title {
+  color: #070707;
+  font-size: 24px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.game__item-text {
+  padding-bottom: 20px;
+}
+
+.game__item-link {
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: auto;
+}
