--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@ body {
   font-size: 16px;
   line-height: normal;
   color: #5C5C5E;
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
 .header {
@@ -78,6 +80,21 @@ body {
   height: 80px;
 }
 
+.menu-btn {
+  display: none;
+  width: 40px;
+  height: 30px;
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-btn span {
+  height: 2px;
+  width: 100%;
+  background-color: #000;
+}
+
 .menu {
   display: flex;
   gap: 0 20px;
@@ -85,6 +102,7 @@ body {
 
 .logo {
   justify-self: center;
+  display: flex;
 }
 
 .basket {
@@ -234,6 +252,8 @@ body {
 
 .tabs__content-img {
   grid-row: 1/-1;
+  align-self: stretch;
+  object-fit: cover;
 
 }
 
@@ -336,6 +356,7 @@ body {
   color: #070707;
   font-size: 24px;
   font-weight: 400;
+  min-height: 58px;
   margin-bottom: 10px;
 }
 
@@ -394,7 +415,7 @@ body {
 }
 
 .equipment {
-  margin-bottom: 100px;
+  margin-bottom: 80px;
 }
 
 .equipment__title {
@@ -410,6 +431,10 @@ body {
 
 .equipment__box-img {
   margin-bottom: 10px;
+}
+
+.equipment__box-text {
+  min-height: 40px;
 }
 
 .equipment__box-title {
@@ -515,7 +540,8 @@ body {
 }
 
 .accessories__item-text {
-  margin-bottom: 42px;
+  /* margin-bottom: 42px; */
+  min-height: 78px;
 }
 
 .accessories__item-price {
@@ -597,15 +623,217 @@ body {
   font-size: 13px;
 }
 
-.footer{
+.footer {
   border-top: 1px solid #CACAD6;
   border-bottom: 1px solid #CACAD6;
   margin-bottom: 44px;
   padding: 30px 0;
 }
 
-.social{
+.social {
   justify-self: end;
   display: flex;
   gap: 0 20px;
+}
+
+@media(max-width:1140px) {
+  .footer .menu {
+    display: none;
+  }
+.footer .nav{
+  display: flex;
+  justify-content: space-between;
+}
+
+}
+
+
+
+@media(max-width:992px) {
+  .tabs {
+    display: block;
+  }
+
+  .tabs__btn {
+    display: block;
+    column-count: 2;
+  }
+
+  .tabs__btn-item {
+    display: block;
+  }
+
+  .game__inner {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+  }
+
+  .game__item-title {
+    min-height: 0;
+  }
+
+  .accessories__items {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+}
+
+@media(max-width:820px) {
+  .equipment__box {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .equipment__box-text {
+    padding-bottom: 10px;
+  }
+
+  .contacts__inner {
+    display: block;
+  }
+
+  .contacts__form {
+    margin-bottom: 20px;
+  }
+
+  .menu-btn {
+    display: flex;
+  }
+
+  .menu {
+    transform: translateX(-100%);
+    transition: transform 1s;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    padding: 100px 0;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .menu.menu--active {
+    transform: translateX(0%);
+  }
+
+  .menu__link {
+    font-size: 24px;
+    padding: 10px 0;
+    display: inline-block;
+  }
+}
+
+
+@media(max-width:768px) {
+  .title {
+    font-size: 66px;
+  }
+
+  .subtitle {
+    font-size: 24px;
+  }
+}
+
+@media(max-width:640px) {
+  .buy-btn {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+
+  .top {
+    text-align: center;
+  }
+}
+
+
+
+@media(max-width:568px) {
+
+  .features__titles {
+    display: block;
+  }
+
+  .tabs__content-item {
+    display: block;
+    height: 0;
+    position: relative;
+  }
+
+  .tabs__content-item--active {
+    height: auto;
+  }
+
+  .video {
+    width: auto;
+    height: 250px;
+    margin-top: 20px;
+  }
+
+  .equipment__box {
+    display: block;
+  }
+
+  .equipment__box-img {
+    width: 100%;
+  }
+
+  .equipment__box-item:last-child,
+  .equipment__box-item:nth-child(3) {
+    padding-left: 0px;
+  }
+
+  .equipment__box-title {
+    margin-bottom: 10px;
+  }
+
+  .accessories__items {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+
+  .accessories__text {
+    font-size: 28px;
+  }
+
+  .nav {
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
+  .footer .nav{
+    flex-direction: column;
+    height: auto;
+  }
+
+  .social{
+    order: -1;
+    margin-bottom: 20px;
+    gap: 30px;
+  }
+
+}
+
+@media(max-width:420px) {
+  .title {
+    font-size: 48px;
+  }
+
+  .subtitle {
+    font-size: 20px;
+  }
+
+  .tabs__btn {
+    column-count: 1;
+    margin-bottom: 20px;
+  }
+
+  .features__text {
+    font-size: 32px;
+    padding: 10px 0;
+  }
+
+  .menu {
+    width: 100%;
+  }
 }
